[tool.poetry]
name = "once"
version = "0.2.0"
description = "A one-time file sharing personal service, running serverless on AWS"
authors = ["Domenico Testa"]
license = "MIT"
packages = [
    { include = "client/*.py" },
]

[tool.poetry.dependencies]
python = "~3.8"
"click" = "^7.1"
"requests" = "^2.24"
"Pygments" = "^2.6"
"aws-cdk.aws-apigatewayv2-integrations" = "^1.74.0"
"aws-cdk.core" = "^1.74"
"aws-cdk.aws-apigatewayv2" = "^1.74"
"aws-cdk.aws-dynamodb" = "^1.74"
"aws-cdk.aws-lambda" = "^1.74"
"aws-cdk.aws-s3" = "^1.74"
"aws-cdk.aws-certificatemanager" = "^1.74"
"aws-cdk.aws-cloudformation" = "^1.74"
"aws-cdk.aws-events" = "^1.74"
"aws-cdk.aws-events-targets" = "^1.74"
"aws-cdk.aws-logs" = "^1.74"
"aws-cdk.aws-route53" = "^1.74"

[tool.poetry.scripts]
once = 'client:share'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
